--- a/6/index.html
+++ b/6/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
 
 
-    <title>Snail Bob 6: Winter Story</title>
+    <title>Snail Bob 6 Winter Story | UBGFun</title>
+    <meta name="robots" content="noindex,nofollow" />
+    <script src="https://ubgfun.github.io/resource/scripts/main.js"></script>
 
     <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
 
