--- a/8/index.html
+++ b/8/index.html
@@ -9,7 +9,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
 
-    <title>Snail Bob 8: Island Story</title>
+    <title>Snail Bob 8 Island Story | UBGFun</title>
+    <meta name="robots" content="noindex,nofollow" />
+    <script src="https://ubgfun.github.io/resource/scripts/main.js"></script>
 
     <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
 
