--- a/2/index.html
+++ b/2/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Snail Bob 2</title>
+            <title>Snail Bob 2 | UBGFun</title>
+            <meta name="robots" content="noindex,nofollow" />
+            <script src="https://ubgfun.github.io/resource/scripts/main.js"></script>
             <meta http-equiv="Content-Type" content="text/html, charset=utf-8" />
             <meta name="apple-mobile-web-app-capable" content="yes" />
             <meta name="apple-touch-fullscreen" content="yes" />
