--- a/3/index.html
+++ b/3/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-	<title>Snail Bob 3</title>
+	<title>Snail Bob 3 | UBGFun</title>
+	<meta name="robots" content="noindex,nofollow" />
+	<script src="https://ubgfun.github.io/resource/scripts/main.js"></script>
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/icon.png">
 	<meta name="MobileOptimized" content="960">
 	<meta name="msapplication-tap-highlight" content="no" />
@@ -15,7 +17,7 @@
 	<script type="text/javascript" src="game.js"></script>
 </head>
 
-<body style="-ms-touch-action: none; margin: 0px; padding: 0px; background: #fff;">
+<body style="margin: 0px; padding: 0px; background: #fff;">
 	<div id="main_container"></div>
 	<script type="text/javascript">
 		var SpilData = {
