--- a/5/index.html
+++ b/5/index.html
@@ -10,7 +10,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
 
-    <title>Snail Bob 5: Love Story</title>
+    <title>Snail Bob 5 | UBGFun</title>
+    <meta name="robots" content="noindex,nofollow" />
+    <script src="https://ubgfun.github.io/resource/scripts/main.js"></script>
 
 
     <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
