--- a/7/index.html
+++ b/7/index.html
@@ -8,7 +8,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
 
-    <title>Snail Bob 7: Fantasy Story</title>
+    <title>Snail Bob 7: Fantasy Story | UBGFun</title>
+    <meta name="robots" content="noindex,nofollow" />
+    <script src="https://ubgfun.github.io/resource/scripts/main.js"></script>
 
     <link rel="stylesheet" href="assets/css/app.css" type="text/css" />
 
